# ccdbg

./: .gitignore  Cargo.toml  README.md  install.sh  pricing.toml
.github/workflows/: ci.yml  release.yml
npm/ccdbg/: package.json
npm/cli-darwin-arm64/: package.json
npm/cli-darwin-x64/: package.json
npm/cli-linux-arm64/: package.json
npm/cli-linux-x64/: package.json
scripts/: release.sh
src/: analyses.rs  export.rs  ingest.rs  lib.rs  main.rs  model.rs  pricing.rs  web.rs
tests/: export_test.rs
tests/fixtures/: cache_waste_session.jsonl  dup_message.jsonl  loop_session.jsonl  minimal_session.jsonl  tool_error_session.jsonl
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  BundleContext.tsx  api.ts  types.ts
web/src/components/: CostAlternatives.tsx  InsightsTray.tsx  MetricCard.tsx  SessionInsights.tsx  SeverityBadge.tsx  ToolCallsTable.tsx
web/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  select.tsx  table.tsx  tabs.tsx
web/src/lib/: colors.ts
web/src/views/: CompareView.tsx  DetailView.tsx  IssuesView.tsx  ProfileView.tsx  SessionsView.tsx
